--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,11 @@
                 <img src="instagram_icon.png" alt="Instagram Logo">
                 <a href="https://www.instagram.com/andrei_crisca/" target="_blank">Instagram</a>
             </div>
-              <br>
-              <a class="linkuri" href="www.csac.ro">www.csac.ro</a>
+            <div>
+                <a class="linkuri" href="www.csac.ro">www.csac.ro</a>
                 <a class="linkuri" href="https://scanstart.ro/">https://scanstart.ro</a>
                 <a class="linkuri" href="https://graffino.com/">https://graffino.com</a>
+            </div>
           </section>
         </main>
         <div class="animated-character">
